# strop

./: Cargo.toml
src/: machine.rs  main.rs  search.rs
