[package]
name = "strop"
version = "0.1.0"
authors = ["Sam M W <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
rand = "0.8.4"
enum-utils = "0.1.2"
yaml-rust = "0.4"
nohash-hasher = "*"

# [profile.release]
# debug = true
